@@ -22,7 +22,7 @@ public interface PrincipalElectionStrategyConflictResolver {
      * @return the principal election strategy conflict resolver
      */
     static PrincipalElectionStrategyConflictResolver last() {
-        return (principals, attributes) -> principals.get(principals.size() - 1).getId();
+        return (principals, attributes) -> principals.getLast().getId();
     }
 
     /**
@@ -31,7 +31,7 @@ public interface PrincipalElectionStrategyConflictResolver {
      * @return the principal election strategy conflict resolver
      */
     static PrincipalElectionStrategyConflictResolver first() {
-        return (principals, attributes) -> principals.get(0).getId();
+        return (principals, attributes) -> principals.getFirst().getId();
     }
 
     /**
