@@ -50,7 +50,7 @@ class PooledLdapConnectionFactoryHealthIndicatorTests {
             .map(it -> (HealthIndicator) it.getContributor())
             .map(it -> it.health().getStatus()).toList();
         assertFalse(results.isEmpty());
-        assertEquals(Status.UP, results.get(0));
+        assertEquals(Status.UP, results.getFirst());
         pooledLdapConnectionFactoryHealthIndicatorListFactoryBean.destroy();
     }
 }
